video overflow fixed.

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -632,7 +632,7 @@ article
 #subOverlay
 {
     position: fixed;
-    margin: 10% 15% 10% 20%;
+    margin: 6% 15% 10% 20%;
     width: 60%;
     height: 0%;
     z-index: 7;
